Implement API clients for QR Code, User, and Wallet services with Resilience4j integration
- Added QRCodeApi, UserApi, and WalletApi interfaces for inter-service communication.
- Refactored QRCodeClientService, UserClientService, and WalletClientService to utilize these APIs, replacing the previous RestClient implementation.
- Introduced domain models for Payment, QRCode, User, Wallet, and Transaction.
- Implemented mappers for converting between domain models and DTOs.
- Updated PaymentController and TransactionController to use new domain models and mappers for improved response handling.
- Enhanced error handling with Resilience4j annotations for circuit breaking and retries.
- Updated README.md to reflect new service availability status codes.